Fix user color in dark mode.

--- a/assets/scss/darkmode.scss
+++ b/assets/scss/darkmode.scss
@@ -72,7 +72,7 @@ div.level {
 }
 
 .t_user {
-	color: #6464e2;
+	color: #9898ff;
 }
 
 .lvl-box {
